objects/Drink_Order__c.object
<CustomObject>
    <fields>
        <fullName>Flavor__c</fullName>
        <label>Flavor</label>
        <picklist>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lemon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apple</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Drink Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Drink Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drink Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>